# rtx-dev

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  compose.yaml  deploy-agent.sh  launch-inference.sh
charm-freeipa-client/: README.md  charmcraft.yaml  pyproject.toml  requirements.txt  tox.ini
charm-freeipa-client/src/: charm.py
charm-freeipa-client/tests/unit/: test_charm.py
charm-freeipa-server/: .gitignore  LICENSE  README.md  charmcraft.yaml  pyproject.toml  tox.ini
charm-freeipa-server/src/: charm.py
charm-freeipa-server/tests/unit/: test_charm.py
compose/: nginx.conf
compose/vllm-agent/: Dockerfile  entrypoint.sh
docs/: architecture.md  mcp-tools.md  provisioning.md  worker-mcp-clients.md
docs/superpowers/plans/: 2026-05-08-docker-compose-stack.md  2026-05-08-nginx-unified-endpoint.md  2026-05-08-remote-mode-skills.md  2026-05-08-vllm-agent-runtime.md  2026-05-08-vllm-auth-artifacts-verify.md  2026-05-08-vllm-cleanup.md  2026-05-08-vllm-mcp-integration.md  2026-05-11-worker-git-tools.md
docs/superpowers/specs/: 2026-05-08-docker-compose-stack-design.md  2026-05-08-remote-mode-skills-design.md  2026-05-08-vllm-heavy-lifting-design.md  2026-05-11-worker-git-tools-design.md
mcp-server/: example-mcp-config.json  pyproject.toml  vllm_mcp.py
mcp-server/vllm_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
profiles/: rtx-inference.yaml.tpl
test_apps/crawl/: ARCHITECTURE.md  README.md  pyproject.toml
test_apps/crawl/crawl/: __init__.py
test_apps/fastapi-gen/: ARCHITECTURE.md  README.md  pyproject.toml
test_apps/fastapi-gen/fastapi_gen/: __init__.py  templates.py
test_apps/jwt-decode/: ARCHITECTURE.md  README.md  pyproject.toml
test_apps/jwt-decode/jwt_decode/: __init__.py
test_apps/kfp-gen/: ARCHITECTURE.md  README.md  pyproject.toml
test_apps/kfp-gen/kfp_gen/: __init__.py  templates.py
test_apps/multi-exec/: ARCHITECTURE.md  README.md  pyproject.toml
test_apps/multi-exec/multi_exec/: __init__.py
test_apps/sort-viz/: app.js  index.html  style.css
vllm-agent/: .gitignore  README.md  pyproject.toml
vllm-agent/src/vllm_agent/: __init__.py  api.py  cli.py  loop.py  prompts.py  server.py  sessions.py  skills.py  transcript.py  workspace.py
vllm-agent/src/vllm_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vllm-agent/src/vllm_agent/tools/: __init__.py  base.py  finish.py  fs.py  mcp_client.py  search.py  shell.py
vllm-agent/tests/: test_api.py  test_cli.py  test_live_smoke.py  test_loop.py  test_mcp_client.py  test_prompts.py  test_prompts_mcp_block.py  test_server.py  test_sessions.py  test_skills.py  test_smoke.py  test_tools_finish.py  test_tools_fs.py  test_tools_registry.py  test_tools_search.py  test_tools_shell.py  test_transcript.py  test_workspace.py
