[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "freeipa-client"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ops>=2.16",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ops[testing]",
    "setuptools",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"