[project]
name = "vllm-mcp-server"
version = "0.1.0"
description = "MCP stdio server wrapping a vLLM OpenAI-compatible endpoint."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "vllm-agent",
]

[tool.uv.sources]
vllm-agent = { path = "../vllm-agent", editable = true }

[project.scripts]
vllm-mcp = "vllm_mcp:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["vllm_mcp"]
