[project]
name = "vllm-agent"
version = "0.1.0"
description = "Agent runtime backed by a vLLM OpenAI-compatible endpoint."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
vllm-agent = "vllm_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: tests that hit the real vLLM endpoint (opt-in)"]
