[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crawl"
version = "0.1.0"
description = "A CLI tool to fetch URLs in parallel and store results."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
crawl = "crawl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crawl*"]
